force-app/main/default/objects/Participant_Feedback__c/Participant_Feedback__c.object-meta.xml
<CustomObject>
    <label>Participant Feedback</label>
    <nameField>
        <displayFormat>PE{0000000}</displayFormat>
        <label>Feedback No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>