force-app/main/default/objects/Participant_Feedback__c/fields/Approved_to_use_in_Media__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_use_in_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to use in Media</label>
    <type>Checkbox</type>
</CustomField>