force-app/main/default/objects/Participant_Feedback__c/fields/Attend_another_Online__c.field-meta.xml
<CustomField>
    <fullName>Attend_another_Online__c</fullName>
    <description>Added for Online Classes</description>
    <label>Attend another Online</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>