force-app/main/default/objects/Participant_Feedback__c/fields/Booklet__c.field-meta.xml
<CustomField>
    <fullName>Booklet__c</fullName>
    <inlineHelpText>How satisfied were you with the LGFB booklet and information you received?</inlineHelpText>
    <label>Booklet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>