force-app/main/default/objects/Participant_Feedback__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Type</field>
            <operation>contains</operation>
            <value>Class - Women, Class - Men, Class - Teen, Awareness, Class - Online, Class - Community</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Participant Feedback</relationshipLabel>
    <relationshipName>Participant_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>