force-app/main/default/objects/Participant_Feedback__c/fields/Class_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Attended_Date__c</fullName>
    <label>Class Attended Date</label>
    <type>Date</type>
</CustomField>