force-app/main/default/objects/Participant_Feedback__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>T00000448</description>
    <formula>Class__r.Website_Name__c</formula>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>