force-app/main/default/objects/Participant_Feedback__c/fields/Connection_with_Others_Topic__c.field-meta.xml
<CustomField>
    <fullName>Connection_with_Others_Topic__c</fullName>
    <description>Added for online men</description>
    <label>Connection with Others Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Useful</fullName>
            </value>
            <value>
                <fullName>Useful</fullName>
            </value>
            <value>
                <fullName>Of Little Use</fullName>
            </value>
            <value>
                <fullName>Not Useful</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>