force-app/main/default/objects/Participant_Feedback__c/fields/Facilitator_Email__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Email__c</fullName>
    <description>T00000448</description>
    <formula>Class__r.Tutor__r.Email</formula>
    <label>Facilitator Email</label>
    <type>Text</type>
</CustomField>