force-app/main/default/objects/Participant_Feedback__c/fields/Guest_Speaker_Encouragement__c.field-meta.xml
<CustomField>
    <fullName>Guest_Speaker_Encouragement__c</fullName>
    <description>Added for men&apos;s online</description>
    <label>Guest Speaker Encouragement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>