force-app/main/default/objects/Participant_Feedback__c/fields/Hair_Care__c.field-meta.xml
<CustomField>
    <fullName>Hair_Care__c</fullName>
    <label>Hair Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Useful</fullName>
            </value>
            <value>
                <fullName>Useful</fullName>
            </value>
            <value>
                <fullName>Of Little Use</fullName>
            </value>
            <value>
                <fullName>Not Useful</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Neither Agree nor Disagree</fullName>
                <isActive>false</isActive>
                <label>Neither Agree nor Disagree</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>