force-app/main/default/objects/Participant_Feedback__c/fields/Helpful_Tips__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Tips__c</fullName>
    <inlineHelpText>The class gave me some helpful tips &amp; tricks to cope during my treatment</inlineHelpText>
    <label>Helpful Tips/Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neither Agree nor Disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>