force-app/main/default/objects/Participant_Feedback__c/fields/Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Mailing_List__c</fullName>
    <label>Mailing List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>