force-app/main/default/objects/Participant_Feedback__c/fields/Mens__c.field-meta.xml
<CustomField>
    <fullName>Mens__c</fullName>
    <formula>IF(OR(TEXT( Class__r.Type)  = &quot;Class - Men&quot;,  TEXT(Class__r.Online_Content_Type__c) = &quot;Mens&quot;),
TRUE,FALSE)</formula>
    <label>Mens</label>
    <type>Checkbox</type>
</CustomField>