force-app/main/default/objects/Participant_Feedback__c/fields/Overall_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Comments__c</fullName>
    <label>Overall Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>