force-app/main/default/objects/Participant_Feedback__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Feedback</relationshipLabel>
    <relationshipName>Participant_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>