force-app/main/default/objects/Participant_Feedback__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <description>T00000426</description>
    <formula>Participant__r.Email</formula>
    <label>Participant Email</label>
    <type>Text</type>
</CustomField>