force-app/main/default/objects/Participant_Feedback__c/fields/Recommend_to_Other_Women__c.field-meta.xml
<CustomField>
    <fullName>Recommend_to_Other_Women__c</fullName>
    <label>Recommend to Others</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>