force-app/main/default/objects/Participant_Feedback__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancer Society</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Feel Better Month campaign</fullName>
            </value>
            <value>
                <fullName>Former Patient</fullName>
            </value>
            <value>
                <fullName>Friend or relative</fullName>
            </value>
            <value>
                <fullName>Hairdresser or Stylist</fullName>
            </value>
            <value>
                <fullName>Health Professional - Doctor</fullName>
            </value>
            <value>
                <fullName>Health Professional - Nurse</fullName>
            </value>
            <value>
                <fullName>Health Professional - Social Worker</fullName>
            </value>
            <value>
                <fullName>Insurance Provider</fullName>
            </value>
            <value>
                <fullName>LGFB Volunteer</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Previously Attended</fullName>
            </value>
            <value>
                <fullName>Web Search</fullName>
            </value>
            <value>
                <fullName>Wig Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>