force-app/main/default/objects/Participant_Feedback__c/fields/Structure_Content__c.field-meta.xml
<CustomField>
    <fullName>Structure_Content__c</fullName>
    <inlineHelpText>What did you think about the structure and content of the class? eg 12 steps</inlineHelpText>
    <label>Structure &amp; Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>