force-app/main/default/objects/Participant_Feedback__c/fields/Themes__c.field-meta.xml
<CustomField>
    <fullName>Themes__c</fullName>
    <label>Themes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>No Hair Loss</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Confidence</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Improvement Suggestions</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>