force-app/main/default/objects/Participant_Feedback__c/fields/Tutor_Email__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Email__c</fullName>
    <description>depreciated T00000448</description>
    <label>Tutor Email</label>
    <type>Email</type>
</CustomField>