force-app/main/default/objects/Participant_Feedback__c/fields/Tutor_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Email_Sent_Date__c</fullName>
    <label>Facilitator Email Sent Date</label>
    <type>Date</type>
</CustomField>