force-app/main/default/objects/Participant_Feedback__c/fields/Why_Online__c.field-meta.xml
<CustomField>
    <fullName>Why_Online__c</fullName>
    <inlineHelpText>It is a more convenient way for me to access a LGFB class
I have attended a local class and wanted a refresher of the tips
I am interested in the different content not covered in a class
I wanted a taster of what to expect before I register for a class</inlineHelpText>
    <label>Why Online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Previously Attended/Refresher</fullName>
            </value>
            <value>
                <fullName>Postponed Class</fullName>
            </value>
            <value>
                <fullName>Different Content</fullName>
            </value>
            <value>
                <fullName>Taster</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Guest Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>