force-app/main/default/objects/Participant_Feedback__c/fields/Wigs__c.field-meta.xml
<CustomField>
    <fullName>Wigs__c</fullName>
    <label>Wigs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Useful</fullName>
            </value>
            <value>
                <fullName>Useful</fullName>
            </value>
            <value>
                <fullName>Of Little Use</fullName>
            </value>
            <value>
                <fullName>Not Useful</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>