force-app/main/default/objects/Participant_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Recommend_to_Other_Women__c</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Participant__c</columns>
    <columns>Class__c</columns>
    <columns>Overall_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>