force-app/main/default/objects/Participant_Feedback__c/listViews/All_Mens.listView-meta.xml
<ListView>
    <fullName>All_Mens</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Region__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Recommend_to_Other_Women__c</columns>
    <columns>Tutor_Email_Sent_Date__c</columns>
    <columns>Overall_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mens__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Mens</label>
    <language>en_US</language>
</ListView>