force-app/main/default/objects/Participant_Feedback__c/listViews/Email_Opt_In_NO.listView-meta.xml
<ListView>
    <fullName>Email_Opt_In_NO</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>Region__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Recommend_to_Other_Women__c</columns>
    <columns>Overall_Comments__c</columns>
    <columns>Tutor_Email_Sent_Date__c</columns>
    <columns>Registration_Process__c</columns>
    <columns>Mailing_List__c</columns>
    <columns>Email_Opt_In__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Opt_In__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Email Opt In _NO</label>
</ListView>